--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 MONGOURL = mongodb+srv://nirmalkumargurajada:HJVagYU59h3CgiTv@evallo.fibftn5.mongodb.net/
 SECRET = Evallo
+
+API_KEY: AIzaSyD0EMKnBNFEzFrRMHuikGmL1gvuJHuTJhU
+AUTH_DOMAIN: evallomedia.firebaseapp.com
+PROJECT_ID: evallomedia
+STORAGE_BUCKET: evallomedia.appspot.com
+MESSAGING_SENDER_ID: 770046440238
+APP_ID: 1:770046440238:web:c817cd60bd524de1dbc0bf
