--- a/backend/content-submission-service/package.json
+++ b/backend/content-submission-service/package.json
@@ -10,16 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
-    "circular-json": "^0.5.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.1",
-    "express-http-context": "^1.2.4",
-    "flatted": "^3.2.9",
+    "firebase": "^10.7.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.2",
-    "nodemon": "^2.0.20",
-    "uuid": "^9.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20"
   }
 }
