--- a/frontend/host/package.json
+++ b/frontend/host/package.json
@@ -38,6 +38,7 @@
     "@mui/material": "^5.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-spring": "^9.7.3"
   }
